--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="script.js" defer></script>
+
 </head>
 <body>
     <header class="header">
@@ -66,6 +68,7 @@
           </div>
           <button class="btn btn-light-green" type="submit">Submit</button>
         </form>
+        </div>
         <div class="overlay" id="overlay"></div>
 </body>
 </html>
